Add IT Locate, Add Toggle Lock/Ulock Layout

--- a/locale/ru/overlay.dtd
+++ b/locale/ru/overlay.dtd
@@ -2,3 +2,4 @@
 <!ENTITY not_loaded "Макет не загружен.">
 <!ENTITY add_layout "Добавить макет">
 <!ENTITY delete_layout "Удалить макет">
+<!ENTITY tooltip_button "FireX Pixel-Perfect">
