--- a/locale/en-US/overlay.dtd
+++ b/locale/en-US/overlay.dtd
@@ -2,3 +2,4 @@
 <!ENTITY not_loaded "The layout is not loaded.">
 <!ENTITY add_layout "Add layout">
 <!ENTITY delete_layout "Remove layout">
+<!ENTITY tooltip_button "FireX Pixel-Perfect">
