Added Italian locale; Added Lock/Unlock layout feature; Thanks for changes to ciarlystreet!

--- a/locale/ru/overlay.dtd
+++ b/locale/ru/overlay.dtd
@@ -3,3 +3,4 @@
 <!ENTITY add_layout "Добавить макет">
 <!ENTITY delete_layout "Удалить макет">
 <!ENTITY tooltip_button "FireX Pixel-Perfect">
+<!ENTITY transparent_layout "Заблокировать/Разблокировать">
