--- a/locale/en-US/overlay.dtd
+++ b/locale/en-US/overlay.dtd
@@ -1,5 +1,6 @@
 <!ENTITY opacity "Opacity:">
 <!ENTITY not_loaded "The layout is not loaded.">
+<!ENTITY upload_layout "Update layout">
 <!ENTITY add_layout "Add layout">
 <!ENTITY delete_layout "Remove layout">
 <!ENTITY tooltip_button "FireX Pixel-Perfect">
