--- a/locale/ru/overlay.dtd
+++ b/locale/ru/overlay.dtd
@@ -1,5 +1,6 @@
 <!ENTITY opacity "Прозрачность:">
 <!ENTITY not_loaded "Макет не загружен.">
+<!ENTITY upload_layout "Загрузить макет">
 <!ENTITY add_layout "Добавить макет">
 <!ENTITY delete_layout "Удалить макет">
 <!ENTITY tooltip_button "FireX Pixel-Perfect">
